# Adaptive-AUTOSAR

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.ja.md  CONTRIBUTING.ja.md  README.ja.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.ja.md  feature_request.ja.md
.github/workflows/: cmake.yml
cmake/: AdaptiveAutosarAPConfig.cmake.in
configuration/: diagnostic_manager_manifest.arxml  pubsub_sample_manifest.arxml  vsomeip-local.json  vsomeip-pubsub-sample.json  vsomeip-rpi.json
deployment/rpi_ecu/: RASPI_SETUP_MANUAL.ja.md  RASPI_SETUP_MANUAL.md  README.ja.md  README.md
docs/: LOCAL_LINUX_DEVELOPMENT_TUTORIAL.md  LOCAL_LINUX_QUICKSTART.md  PLATFORM_DAEMONS.md  RASPI_ECU_DEPLOYMENT_TUTORIAL.md  README.ja.md  README.md  USER_APPS_GUIDE.md  doxygen.conf  simulation_flow_diagram.drawio
qnx/: README.ja.md  README.md  build_all_qnx.sh  docker_build_qnx.sh
qnx/cmake/: toolchain_qnx800.cmake
qnx/deploy/: bringup_qnx.sh.in  rc.autosar.sh  slm-config-autosar.xml
qnx/env/: qnx800.env  qnx800.env.example
qnx/patches/: apply_async_bsd_socket_qnx_support.py  apply_obd_emulator_qnx_support.py  apply_vsomeip_qnx_support.py  poller_posix.cpp
qnx/scripts/: build_all_qnx.sh  build_autosar_ap_qnx.sh  build_boost_qnx.sh  build_cyclonedds_qnx.sh  (+9 more)
samples/switchable_pubsub/: CMakeLists.txt  README.md
samples/switchable_pubsub/src/: pubsub_usage_scan.cpp  switchable_sub.cpp
scripts/: build_and_install_autosar_ap.sh  build_and_install_autosar_ap_qnx.sh  build_and_install_qnx_ecu_profile.sh  build_and_install_rpi_ecu_profile.sh  build_switchable_pubsub_sample.sh  build_switchable_pubsub_sample_qnx.sh  build_user_apps_from_opt.sh  build_user_apps_from_opt_qnx.sh  generate_doxygen_docs.sh  generate_simulation_flow_png.py  install_cyclonedds.sh  install_cyclonedds_qnx.sh  install_dependemcy.sh  install_dependencies.sh  install_dependency.sh  install_iceoryx.sh  install_iceoryx_qnx.sh  install_middleware_stack.sh  install_middleware_stack_qnx.sh  install_rpi_ecu_services.sh  install_vsomeip.sh  install_vsomeip_qnx.sh  run_ci_tests_locally.sh  setup_socketcan_interface.sh  verify_rpi_ecu_profile.sh
src/: main.cpp  main_can_interface_manager.cpp  main_crypto_provider.cpp  main_diag_server.cpp  main_dlt_daemon.cpp  main_iam_policy_loader.cpp  main_network_manager.cpp  main_ntp_time_provider.cpp  main_persistency_guard.cpp  main_phm_daemon.cpp  main_ptp_time_provider.cpp  main_sm_state_daemon.cpp  main_time_sync_daemon.cpp  main_ucm_daemon.cpp  main_user_app_monitor.cpp  main_vsomeip_routing_manager.cpp  main_watchdog_supervisor.cpp
tools/host_tools/doip_diag_tester/: CMakeLists.txt  README.ja.md  README.md  doip_diag_tester_app.cpp
user_apps/: CMakeLists.txt  README.ja.md  README.md
user_apps/idl/: UserAppsStatus.idl
user_apps/src/apps/: CMakeLists.txt  README.ja.md  README.md
user_apps/src/apps/basic/: CMakeLists.txt  exec_signal_app.cpp  minimal_runtime_app.cpp  per_phm_app.cpp  raspi_ecu_app.cpp  raspi_mock_ecu_app.cpp
user_apps/src/apps/communication/: CMakeLists.txt
user_apps/src/apps/communication/dds/: CMakeLists.txt  pub_app.cpp  sub_app.cpp
user_apps/src/apps/communication/diag/: CMakeLists.txt
user_apps/src/apps/communication/someip/: CMakeLists.txt  consumer_app.cpp  provider_app.cpp  types.h
user_apps/src/apps/communication/switchable_pubsub/: CMakeLists.txt  README.md
user_apps/src/apps/communication/switchable_pubsub/idl/: VehicleStatusFrame.idl
user_apps/src/apps/communication/switchable_pubsub/src/: switchable_pub.cpp
user_apps/src/apps/communication/zerocopy/: CMakeLists.txt  pub_app.cpp  sub_app.cpp
user_apps/src/apps/feature/: CMakeLists.txt
user_apps/src/apps/feature/can/: CMakeLists.txt  socketcan_receive_decode_app.cpp
user_apps/src/apps/feature/ecu/: CMakeLists.txt  ecu_full_stack_app.cpp  ecu_someip_source_app.cpp
user_apps/src/apps/feature/em/: CMakeLists.txt  em_actuator_app.cpp  em_daemon_app.cpp  em_sensor_app.cpp
user_apps/src/apps/feature/runtime/: CMakeLists.txt  exec_runtime_monitor_app.cpp  runtime_lifecycle_app.cpp
user_apps/src/apps/samples/: 01_typed_method_rpc.cpp  02_fire_and_forget.cpp  03_communication_group.cpp  04_field_get_set.cpp  05_event_pubsub.cpp  CMakeLists.txt  in_process_bindings.h
user_apps/src/features/: README.ja.md  README.md
user_apps/src/features/communication/can/: can_frame_receiver.h  mock_can_receiver.cpp  mock_can_receiver.h  socketcan_receiver.cpp  socketcan_receiver.h  vehicle_status_can_decoder.cpp  vehicle_status_can_decoder.h
user_apps/src/features/communication/pubsub/: pubsub_autosar_portable_api.cpp  pubsub_autosar_portable_api.h  pubsub_common.cpp  pubsub_common.h
user_apps/src/features/communication/pubsub/idl/: VehicleStatusFrame.idl
user_apps/src/features/communication/vehicle_status/: vehicle_status_proxy.h  vehicle_status_skeleton.h  vehicle_status_types.h
user_apps/src/features/ecu/: ecu_sample_can_common.cpp  ecu_sample_common.cpp  ecu_sample_common.h
user_apps/tutorials/: 00_pubsub_e2e_tutorial.ja.md  00_pubsub_e2e_tutorial.md  01_runtime_lifecycle.ja.md  01_runtime_lifecycle.md  02_exec_signal.ja.md  02_exec_signal.md  03_per_phm.ja.md  03_per_phm.md  04_exec_runtime_monitoring.ja.md  04_exec_runtime_monitoring.md  04_someip_pubsub.ja.md  04_someip_pubsub.md  05_zerocopy_pubsub.ja.md  05_zerocopy_pubsub.md  06_dds_pubsub.ja.md  06_dds_pubsub.md  07_socketcan_decode.ja.md  07_socketcan_decode.md  08_ecu_full_stack.ja.md  08_ecu_full_stack.md  09_rpi_ecu_deployment.ja.md  09_rpi_ecu_deployment.md  10_someip_pubsub.ja.md  10_someip_pubsub.md  10_vendor_autosar_asset_porting.ja.md  10_vendor_autosar_asset_porting.md  11_doip_diag_tester.ja.md  11_manifest_profile_switching_e2e.ja.md  11_manifest_profile_switching_e2e.md  11_zerocopy_pubsub.ja.md  11_zerocopy_pubsub.md  12_dds_pubsub.ja.md  12_dds_pubsub.md  12_exec_runtime_monitoring.ja.md  12_exec_runtime_monitoring.md  13_execution_manager_orchestration.ja.md  13_manifest_profile_switching_e2e.ja.md  13_manifest_profile_switching_e2e.md  14_rpi_minimal_ecu_user_app_management.ja.md  20_socketcan_decode.ja.md  (+23 more)
(+763 files in other folders)
